--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ h6 {
   font-weight: 400;
   margin: 0 0 20px 0;
   padding: 0;
-  color: #0e1b4d;
+  color: #697bc4;
 }
 
 .main-page {
@@ -352,7 +352,7 @@ h6 {
 }
 
 .nav-menu ul li:hover > a {
-  background: #180a0d;
+  background: #9e1835;
   color: #fff;
 }
 
@@ -389,7 +389,7 @@ h6 {
   padding-top: 18px;
   bottom: 0;
   z-index: 998;
-  background: rgba(6, 12, 34, 0.9);
+  background: rgba(154, 11, 211, 0.9);
   left: -260px;
   width: 260px;
   overflow-y: auto;
@@ -1412,14 +1412,14 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------------------------------------*/
 
 #footer {
-  background: #101522;
+  background: #000000;
   padding: 0 0 25px 0;
   color: #eee;
   font-size: 14px;
 }
 
 #footer .footer-top {
-  background: #040919;
+  background: #6f1386;
   padding: 60px 0 30px 0;
 }
 
